[package]
name = "api-warden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
json_typegen = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.19"
rdkafka = "0.33.2"
schema_analysis = {version="0.5.0", features=["json_typegen"]}
serde = {version = "1.0.181", features = ["derive"] }
serde_json = {version= "1.0.104", features = ["raw_value"]}
tokio = {version="1", features = ["full"]}
url = "2.4.0"
